syntax = "proto3";

option csharp_namespace = "gRPC.Autor.Serve";

package Imagen;

service AutorImg {
	rpc GuardarImg (ImgRequest) returns (Respuesta);
	rpc ConsultaCompleta (Empty) returns (ImgResponse);
	rpc ConsultaFiltro (IdImg) returns (ImgRequest);
}

message ImgRequest {
   int32 id = 1;
   string img = 2;
}

message ImgResponse {
   repeated ImgRequest imagenes = 1;
}

message IdImg {
	int32 id = 1;
}

message Empty {}

message Respuesta {
    string mensaje = 1;
}